dxscale/sales/powerBI/objects/OAuthApp_pbi__c/OAuthApp_pbi__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Power BI</description>
    <label>OAuthApp_pbi</label>
</CustomObject>