dxscale/sales/powerBI/objects/OAuthApp_pbi__c/fields/Access_Token_URL__c.field-meta.xml
<CustomField>
    <fullName>Access_Token_URL__c</fullName>
    <description>Access Token URL</description>
    <label>Access Token URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>