dxscale/sales/powerBI/objects/OAuthApp_pbi__c/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <description>Client Id</description>
    <label>Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>