dxscale/sales/powerBI/objects/OAuthApp_pbi__c/fields/Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret__c</fullName>
    <description>Client Secret</description>
    <label>Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>