dxscale/sales/powerBI/objects/OAuthApp_pbi__c/fields/Token_Expires_On__c.field-meta.xml
<CustomField>
    <fullName>Token_Expires_On__c</fullName>
    <description>Token Expires On</description>
    <label>Token Expires On</label>
    <length>255</length>
    <type>Text</type>
</CustomField>